# yt-dlp-batch-builder

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  poetry.toml  pyproject.toml  requirements.txt
.github/: renovate.json
.github/workflows/: ci.yaml
yt_dlp_batch_builder/: main.py  yt_dlp_batch_builder.py
