[tool.poetry]
name = "yt-dlp-batch-builder"
version = "1.1.3"
description = "build a yt-dlp batch file from local YouTube watch later playlist HTML"
authors = ["atloo1 <15357562+atloo1@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pre-commit = "^4.1.0"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]  # sort imports

[tool.ruff.format]
quote-style = "single"
